# KTP

./: Cargo.toml  MANIFEST.yml  Makemanifest  NOCPP.mkbuild  README.md  build.ps1  requirements.txt  setup.py
.circleci/: config.yml
.github/workflows/: build-aarch64.yml  build.yml
AIpropengine/: ai_analyzer.py  main.py  version.py  watcher.py
transfer-protocol/: gitfetcher.rs  ktp_protocol.rs  main.rs  mod.rs
