[package]
name = "ktp"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json", "gzip", "brotli", "deflate", "stream", "blocking", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
scraper = "0.13"
async-ftp = "0.3"
ssh2 = "0.10"
futures = "0.3"
git2 = "0.16"
anyhow = "1.0"
